--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email :
 github : 
 twitter : 
 instagram:
-remote_theme: morelrep/morel-theme
+remote_theme: 
 podcast: true
 jotform: https://form.jotform.com/232067427031145
 
