--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ remote_theme: morelrep/morel-theme
 podcast: true
 jotform: https://form.jotform.com/232067427031145
 
-# If you want to build your site in a repo that is not named youruser.github.io (for example youruser.github.io/reponame), uncomment the following line
-BASE_PATH: /alawit-from-morel
+# If you want to build your site in a repo that is named youruser.github.io (for example youruser.github.io/reponame), comment the following line
+BASE_PATH: /alawit.org
 
 # Do not edit bellow unless you are an advanced user
 
