--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ podcast: true
 jotform: https://form.jotform.com/232067427031145
 
 # If you want to build your site in a repo that is named youruser.github.io (for example youruser.github.io/reponame), comment the following line
-BASE_PATH: /alawit.org
+# BASE_PATH: /alawit.org
 
 # Do not edit bellow unless you are an advanced user
 
